--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.yajul</groupId>
+    <groupId>org.yajul.jboss</groupId>
     <artifactId>jboss-as6-patch</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -14,13 +14,14 @@
         <version.arquillian>1.0.0.Alpha5</version.arquillian>
         <version.slf4j>1.5.10</version.slf4j>
         <version.log4j>1.2.15</version.log4j>
-        <version.jboss_60>6.0.0.Final</version.jboss_60>
+        <version.jboss6>6.0.0.Final</version.jboss6>
+        <version.mysql>5.1.12</version.mysql>
         <jboss.unpack.base>${project.build.directory}/unpacked</jboss.unpack.base>
-        <jboss.unpack.dir>${jboss.unpack.base}/jboss-${version.jboss_60}</jboss.unpack.dir>
+        <jboss.unpack.dir>${jboss.unpack.base}/jboss-${version.jboss6}</jboss.unpack.dir>
     </properties>
 
     <modules>
         <module>jboss-logmanager</module>
-        <module>dist-assembly</module>
+        <module>jboss-as-distribution</module>
     </modules>
 </project>
