--- a/jboss-as-distribution/pom.xml
+++ b/jboss-as-distribution/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <artifactId>jboss-as-distribution</artifactId>
-    <version>6.0.0.P1</version>
+    <version>${version.jboss6.patched}</version>
 
     <packaging>pom</packaging>
     <description>This is the module that actually builds the distribution with the assembly plugin.</description>
@@ -35,7 +35,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.2</version>
                 <executions>
                     <execution>
                         <id>unpack</id>
