--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,26 @@
         <version.log4j>1.2.15</version.log4j>
         <version.jboss6>6.0.0.Final</version.jboss6>
         <version.mysql>5.1.12</version.mysql>
+        <version.testng>5.14</version.testng>
+        <version.jboss6.patched>6.0.0.P1</version.jboss6.patched>
         <jboss.unpack.base>${project.build.directory}/unpacked</jboss.unpack.base>
         <jboss.unpack.dir>${jboss.unpack.base}/jboss-${version.jboss6}</jboss.unpack.dir>
     </properties>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
     <modules>
         <module>jboss-logmanager</module>
         <module>jboss-as-distribution</module>
+        <module>jboss-as6-test</module>
     </modules>
 </project>
