integration test setup - jboss-server-manager not working yet

--- a/jboss-as-distribution/pom.xml
+++ b/jboss-as-distribution/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <artifactId>jboss-as-distribution</artifactId>
-    <version>${version.jboss6.patched}</version>
+    <version>6.0.0.P1</version>
 
     <packaging>pom</packaging>
     <description>This is the module that actually builds the distribution with the assembly plugin.</description>
@@ -62,9 +62,7 @@
                 <executions>
                     <execution>
                         <id>make-assembly</id>
-                        <!-- this is used for inheritance merges -->
                         <phase>package</phase>
-                        <!-- bind to the packaging phase -->
                         <goals>
                             <goal>single</goal>
                         </goals>
