--- a/jboss-as6-test/pom.xml
+++ b/jboss-as6-test/pom.xml
@@ -13,10 +13,58 @@
     <artifactId>jboss-as6-test</artifactId>
 
     <dependencies>
+
+        <!-- The test target -->
+        <!--
+                <dependency>
+                    <groupId>org.yajul.jboss</groupId>
+                    <artifactId>jboss-as-distribution</artifactId>
+                    <version>6.0.0.P1</version>
+                    <classifier>dist</classifier>
+                    <type>tar.gz</type>
+                    <scope>test</scope>
+                </dependency>
+        -->
+
+        <!-- Loggging -->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${version.slf4j}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${version.slf4j}</version>
+            <scope>test</scope>
+            <exclusions>
+                <!-- Transitive log4j exclusions -->
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.jbossas</groupId>
             <artifactId>jboss-server-manager</artifactId>
-            <version>1.0.3.GA</version>
+            <version>1.0.4.Final</version>
             <scope>test</scope>
         </dependency>
 
@@ -47,7 +95,7 @@
                 <executions>
                     <execution>
                         <id>unpack</id>
-                        <phase>generate-test-resources</phase>
+                        <phase>pre-integration-test</phase>
                         <goals>
                             <goal>unpack</goal>
                         </goals>
@@ -56,13 +104,47 @@
                                 <artifactItem>
                                     <groupId>org.yajul.jboss</groupId>
                                     <artifactId>jboss-as-distribution</artifactId>
-                                    <version>${version.jboss6.patched}</version>
+                                    <version>6.0.0.P1</version>
                                     <classifier>dist</classifier>
                                     <type>tar.gz</type>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${jboss.unpack.base}</outputDirectory>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.8.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <trimStackTrace>false</trimStackTrace>
+                    <printSummary>true</printSummary>
+                    <forkMode>once</forkMode>
+                    <environmentVariables>
+                        <JAVA_HOME>${env.JAVA_HOME}</JAVA_HOME>
+                        <JBOSS_HOME>${jboss.unpack.base}</JBOSS_HOME>
+                    </environmentVariables>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
